<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linLay_progressBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackLite1"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/_16sdp"
    tools:targetApi="o">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_white"
        android:layoutDirection="ltr"
        android:minHeight="150dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_16sdp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:orientation="horizontal">



                <EditText
                    android:id="@+id/dialogForgetPass_edTx_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_white_with_blue_border"
                    android:hint="@string/email"
                    android:padding="@dimen/_16sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray3"
                    android:maxLines="1"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/dialogVerification_but_done"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/button_primary_dark"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/dialogVerification_but_edit"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/button_gray"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>