<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/q4"
    tools:context=".Signup">
    <include
        android:id="@+id/appbar"
        layout="@layout/app_bar_title_back"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

<!--            <TextView-->
<!--                android:id="@+id/banner"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--               -->
<!--                android:textSize="35sp"-->
<!--                android:textStyle="bold" />-->

            <TextView
                android:id="@+id/required"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="Required"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/fullname"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:hint="Email"
                android:inputType="text" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/password_toggle"
                android:inputType="numberPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"

                android:hint="@string/login_password" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/phone"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"

                android:hint="@string/Phone_is_required" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:inputType="number"
                android:textColorHint="@color/white"

                android:layout_height="wrap_content"
                android:hint="ID Card Number" />

            <Spinner
                android:id="@+id/bloodtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingLeft="8dp"

                android:background="@drawable/sh_rounded_primary"
                android:popupBackground="@android:color/white"
                android:scrollbars="none"
                android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                android:padding="@dimen/_8sdp"
                android:backgroundTint="@color/white"
                    android:entries="@array/bloodType"
                android:spinnerMode="dropdown" />

<!--            <androidx.appcompat.widget.AppCompatTextView-->
<!--                android:id="@+id/bloodtype"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="@dimen/_10sdp"-->
<!--                android:background="@drawable/sh_rounded_primary"-->
<!--                android:backgroundTint="@color/white"-->
<!--                android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"-->
<!--                android:hint="@string/select_blood_type"-->
<!--                android:maxLines="1"-->
<!--                android:padding="@dimen/_8sdp"-->
<!--                android:textSize="@dimen/_14ssp"-->
<!--                app:layout_constraintTop_toBottomOf="@id/id"-->
<!--                />-->

<!--            <androidx.appcompat.widget.AppCompatEditText-->
<!--                android:textColor="@color/white"-->
<!--                android:id="@+id/bloodtype1"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textColorHint="@color/white"-->

<!--                android:textFontWeight="@integer/google_play_services_version"-->
<!--                android:hint="Blood type" />-->

            <EditText
                android:textColor="@color/white"
                android:id="@+id/phone1"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"

                android:hint="Relatives Phone Number 1" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/phone2"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"

                android:hint="Relatives Phone Number 2" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/phone3"
                android:layout_width="384dp"
                android:inputType="phone"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"

                android:hint="Relatives Phone Number 3" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Age"
                android:textColorHint="@color/white"

                android:inputType="number" />

            <TextView
                android:id="@+id/optional"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Optional" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/medicine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"

                android:hint="Medicine you take" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/diseases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"

                android:hint="Chronic Diseases" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/surgeries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"

                android:hint="Surgeries" />

            <Button
                android:id="@+id/edit_btn1"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/button_blue"
                android:text="Sign up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>